# modelsystem_meta_tracker

./: README.md
pyCodebase/: config.py  metadata_correctness_plotting_crontab.py  utils.py  workflow.py
serverCode/: metadata_correctness.html  run_tasks.sh
trackerMetaManager/: README.md  pyproject.toml
trackerMetaManager/serverCode/: metadata_correctness.rmd
